--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "school management system server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "graham218",
   "license": "ISC",
