--- a/Node_Mongo-Server/package.json
+++ b/Node_Mongo-Server/package.json
@@ -4,7 +4,15 @@
   "description": "mongo db server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "cd client && npm run start",
+    "server-install": "npm install",
+    "client-install": "cd client && npm install",
+    "install-all": "concurrently \"npm run server-install\" \"npm run client-install\" ",
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "graham218",
   "license": "ISC",
@@ -17,6 +25,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
+    "nodemon": "^2.0.15",
     "peer": "^0.6.1",
     "socket.io": "^4.4.1"
   }
