--- a/Node_Mongo-Server/.env
+++ b/Node_Mongo-Server/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = mongodb+srv://graham2001:86747486bB!@cluster0.ikv7h.mongodb.net/school_mgmt_node_react?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://graham218:86747486bB!@cluster0.c3xlh.mongodb.net/school_site_db?retryWrites=true&w=majority
 
-ACCESS_TOKEN_SECRET = billgrahamgates86747486
-REFRESH_TOKEN_SECRET = billgrahamgates86747486
+ACCESS_TOKEN_SECRET = youraccesstokensecret
+REFRESH_TOKEN_SECRET = yourrefreshtokensecret
