--- a/Node_Mongo-Server/package.json
+++ b/Node_Mongo-Server/package.json
@@ -1,25 +1,14 @@
 {
   "name": "node_mongo-server",
   "version": "1.0.0",
-  "description": "mongo db server",
-  "main": "index.js",
+  "description": "school server",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "graham218",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "concurrently": "^7.0.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4",
-    "nodemon": "^2.0.15",
-    "peer": "^0.6.1",
-    "socket.io": "^4.4.1"
+  "author": "Bill Graham",
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
